Validações dos compos abrigatorios com JS

--- a/cliente_dados.html
+++ b/cliente_dados.html
@@ -103,10 +103,9 @@
                                 <input class="form-control" type="date" name="data" id="data" />
                                 <label for="data">Data de Nascimento</label>
                             </div>
-
                             <button type="submit" class="btn btn-lg btn-success">Confirmar</button>
-                            <button type="submit" class="btn btn-lg btn-danger">Alterar</button>
-                            </button>
+                            <button type="submit" class="btn btn-lg btn-danger">Alterar</button> <br>
+                            <br>
                             <div class="alert alert-danger d-none">
                                 Preencha o campo <span id="campo-erro"></span>!
                             </div>
