Validações dos compos abrigatorios com JS

--- a/cliente_dados.html
+++ b/cliente_dados.html
@@ -92,12 +92,12 @@
                     <div class="col-8">
                         <form action="" id="form-contato">
                             <div class="form-floating mb-3">
-                                <input class="form-control" type="text" name="nome" id="nome" placeholder=" Mateus Angelo " autofocus />
-                                <label for="nome">Nome</label>
+                                <input class="form-control" type="text" name="nome" id="nome" placeholder="  " autofocus />
+                                <label for="nome">Mateus Angelo</label>
                             </div>
                             <div class="form-floating mb-3 col-md-6 col-xl-4">
                                 <input class="form-control" type="text" name="cpf" id="cpf" />
-                                <label for="cpf">CPF</label>
+                                <label for="cpf">CPF: 000.000.000-00</label>
                             </div>
                             <div class="form-floating mb-3 col-md-6 col-xl-4">
                                 <input class="form-control" type="date" name="data" id="data" />
