--- a/cadastro.html
+++ b/cadastro.html
@@ -64,23 +64,21 @@
             <div class="container">
                 <h1>Informe seus dados, por favor</h1>
                 <hr>
-                <form class="mt-3">
+                <form class="mt-3" id="form-contato">
                     <div class="row">
                         <div class="col-sm-12 col-md-6" id="form-dados-pessoais">
                             <fieldset class="row gx-3">
                                 <legend>Dados Pessoais</legend>
                                 <div class="form-floating mb-3">
-                                    <input class="form-control" type="text" id="txtNome" placeholder=" " autofocus />
+                                    <input class="form-control" type="text" id="nome" placeholder=" " autofocus />
                                     <label for="txtNome">Nome</label>
                                 </div>
                                 <div class="form-floating mb-3 col-md-6 col-xl-4">
-                                    <input class="form-control" type="text" id="txtCPF" placeholder=" " />
+                                    <input class="form-control" type="text" id="cpf" placeholder=" " />
                                     <label for="txtCPF">CPF</label>
                                 </div>
                                 <div class="form-floating mb-3 col-md-6 col-xl-4">
-                                    <input class="form-control" type="date" id="txtDataNascimento" placeholder=" " />
-                                    <label for="txtDataNascimento" class="d-inline d-sm-none d-md-inline d-lg-none">Data
-                                        Nascimento</label>
+                                    <input class="form-control" type="date" id="data" placeholder=" " />
                                     <label for="txtDataNascimento" class="d-none d-sm-inline d-md-none d-lg-inline">Data
                                         de Nascimento</label>
                                 </div>
@@ -88,12 +86,12 @@
                             <fieldset>
                                 <legend>Contatos</legend>
                                 <div class="form-floating mb-3 col-md-8">
-                                    <input class="form-control" type="email" id="txtEmail" placeholder=" " />
+                                    <input class="form-control" type="email" id="email" placeholder=" " />
                                     <label for="txtEmail">E-mail</label>
                                 </div>
                                 <div class="form-floating mb-3 col-md-6">
-                                    <input class="form-control" placeholder=" " type="text" id="txtTelefone" />
-                                    <label for="txtTelefone">Telefone</label>
+                                    <input class="form-control" placeholder=" " type="telefone" id="telefone" />
+                                    <label for="telefone">Telefone</label>
                                 </div>
                             </fieldset>
                         </div>
@@ -101,35 +99,35 @@
                             <fieldset class="row gx-3">
                                 <legend>Endereço</legend>
                                 <div class="form-floating mb-3 col-md-6 col-lg-4">
-                                    <input class="form-control" type="text" id="txtCEP" placeholder=" " required />
-                                    <label for="txtCEP">CEP</label>
+                                    <input class="form-control" type="text" id="cep" placeholder=" " required />
+                                    <label for="cep">CEP</label>
                                 </div>
                                 <div class="mb-3 col-md-6 col-lg-8 align-self-end">
                                     <textarea class="form-control text-muted bg-light" style="height: 58px; font-size: 14px;" disabled>Digite o CEP para buscarmos o endereço.</textarea>
                                 </div>
                                 <div class="clearfix"></div>
                                 <div class="form-floating mb-3 col-md-4">
-                                    <input class="form-control" type="text" id="txtNumero" placeholder=" " />
-                                    <label for="txtNumero">Número</label>
+                                    <input class="form-control" type="text" id="numero" placeholder=" " />
+                                    <label for="numero">Número</label>
                                 </div>
                                 <div class="form-floating mb-3 col-md-8">
-                                    <input class="form-control" type="text" id="txtComplemento" placeholder=" " />
-                                    <label for="txtComplemento">Complemento</label>
+                                    <input class="form-control" type="text" id="complemento" placeholder=" " />
+                                    <label for="complemento">Complemento</label>
                                 </div>
                                 <div class="form-floating mb-3">
-                                    <input class="form-control" type="text" id="txtReferencia" placeholder=" " />
-                                    <label for="txtReferencia">Referência</label>
+                                    <input class="form-control" type="text" id="referencia" placeholder=" " />
+                                    <label for="referencia">Referência</label>
                                 </div>
                             </fieldset>
                             <fieldset class="row gx-3">
                                 <legend>Senha de Acesso</legend>
                                 <div class="form-floating mb-3 col-lg-6">
-                                    <input class="form-control" type="password" id="txtSenha" placeholder=" " />
-                                    <label for="txtSenha">Senha</label>
+                                    <input class="form-control" type="password" id="senha" placeholder=" " />
+                                    <label for="senha">Senha</label>
                                 </div>
                                 <div class="form-floating mb-3 col-lg-6">
-                                    <input class="form-control" id="txtConfirmacaoSenha" placeholder=" " />
-                                    <label class="form-label" for="txtConfirmacaoSenha">Confirmação da Senha</label>
+                                    <input class="form-control" id="confirmacaosenha" placeholder=" " />
+                                    <label class="form-label" for="confirmacaosenha">Confirmação da Senha</label>
                                 </div>
                             </fieldset>
                         </div>
@@ -143,7 +141,11 @@
                     </div>
                     <div class="mb-3 text-left">
                         <a class="btn btn-lg btn-light btn-outline-danger" href="/">Cancelar</a>
-                        <input type="button" value="Criar meu cadastro" class="btn btn-lg btn-danger" onclick="window.location.href='/confirmarcadastro.html'" />
+                        <button type="submit" class="btn btn-lg btn-danger" href="/confirmarcadastro.html">Criar meu cadastro</button> <br>
+                        <!-- <input type="submit" value="Criar meu cadastro" class="btn btn-lg btn-danger" onclick="window.location.href='/confirmarcadastro.html'" /> -->
+                    </div>
+                    <div class="alert alert-danger d-none">
+                        Preencha o campo <span id="campo-erro"></span>!
                     </div>
                 </form>
             </div>
@@ -208,6 +210,11 @@
     </div>
 
     <!-- the end button topo  -->
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.mask.min.js"></script>
+    <script src="./scripts/validcpf.js"></script>
+    <script src="./scripts/cadastro.js"></script>
 
     <script src="./scripts/topo.js"></script>
     <script src="./js/bootstrap.bundle.js"></script>
