Validações dos compos abrigatorios com JS tela de cadastro

--- a/cadastro.html
+++ b/cadastro.html
@@ -107,7 +107,7 @@
                                 </div>
                                 <div class="clearfix"></div>
                                 <div class="form-floating mb-3 col-md-4">
-                                    <input class="form-control" type="text" id="numero" placeholder=" " />
+                                    <input class="form-control" type="number" id="numero" placeholder=" " />
                                     <label for="numero">Número</label>
                                 </div>
                                 <div class="form-floating mb-3 col-md-8">
