correções no js e html erros de ortografia

--- a/cadastro.html
+++ b/cadastro.html
@@ -126,7 +126,7 @@
                                     <label for="senha">Senha</label>
                                 </div>
                                 <div class="form-floating mb-3 col-lg-6">
-                                    <input class="form-control" id="confirmacaosenha" placeholder=" " />
+                                    <input class="form-control" type="password" id="confirmacaosenha" placeholder=" " />
                                     <label class="form-label" for="confirmacaosenha">Confirmação da Senha</label>
                                 </div>
                             </fieldset>
