--- a/fechamento_pagamento.html
+++ b/fechamento_pagamento.html
@@ -26,7 +26,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-danger border-bottom shadow-sm mb-3">
             <div class="container">
                 <a class="navbar-brand tittle" href="index.html"><b class="init">Sacolão Avenida</b></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse">
+                <button class="navbar-toggler" type="submit" data-bs-toggle="collapse" data-bs-target=".navbar-collapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse">
@@ -75,24 +75,24 @@
                                 <b class="text-dark">Cartão de Crédito</b>
                             </h3>
                             <hr>
-                            <form action="">
+                            <form action="" id="form-cartao">
                                 <div class="form-floating mb-3">
-                                    <input type="text" id="txtNome" class="form-control" placeholder=" " autofocus>
+                                    <input type="text" id="nome" class="form-control" placeholder=" " autofocus>
                                     <label for="txtNome" class="text-black-50">Nome Impresso no Cartão</label>
                     </div>
 
                     <div class="form-floating mb-3">
-                        <input type="text" id="txtNumero" class="form-control" placeholder=" ">
+                        <input type="text" id="numero" class="form-control" placeholder=" ">
                         <label for="txtNumero" class="text-black-50">Número do Cartão</label>
                     </div>
 
                     <div class="form-floating mb-3">
-                        <input type="text" id="txtValidade" class="form-control" placeholder=" ">
+                        <input type="text" id="validade" class="form-control" placeholder=" ">
                         <label for="txtValidade" class="text-black-50">Validade (mm/aa)</label>
                     </div>
 
                     <div class="form-floating mb-3">
-                        <input type="text" id="txtCodigo" class="form-control" placeholder=" ">
+                        <input type="text" id="codigo" class="form-control" placeholder=" ">
                         <label for="txtCodigo" class="text-black-50">Código de Segurança</label>
                     </div>
 
@@ -106,6 +106,11 @@
                                         <option value="6">6 x sem juros</option>
                                     </select>
                         <label for="selParcelas" class="text-black-50">Parcelamento</label>
+                    </div> <br>
+                    <button type="submit" class="btn btn-lg btn-danger" href="">Salvar</button> <br>
+                    <br>
+                    <div class="alert alert-danger d-none">
+                        Preencha o campo <span id="campo-erro"></span>!
                     </div>
                     </form>
 
@@ -129,10 +134,12 @@
                                     <input type="text" id="txtTroco" class="form-control" placeholder=" ">
                                     <label for="txtTroco" class="text-black-50">Precisa de troco para quanto?</label>
                 </div>
+
                 </form>
 
                 </label>
             </div>
+
 
     </div>
 
@@ -140,7 +147,7 @@
         <a href="fechamento_endereco.html" class="btn btn-outline-success btn-lg mb-4">
                         Voltar aos Endereços
                     </a>
-        <a href="fechamento_pedido.html" class="btn btn-danger btn-lg ms-2 mb-4">Finalizar</a>
+        <a href="fechamento_pedido.html" type="submit" class="btn btn-danger btn-lg ms-2 mb-4">Finalizar</a>
     </div>
     </div>
     </main>
@@ -204,9 +211,12 @@
     </div>
 
     <!-- the end button topo  -->
-
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.mask.min.js"></script>
     <script src="./scripts/topo.js"></script>
     <script src="./js/bootstrap.bundle.js"></script>
+    <script src="./scripts/fechamento_pagamento.js"></script>
 </body>
 
 </html>
