atribuindo 'value' nos inputs

--- a/cliente_dados.html
+++ b/cliente_dados.html
@@ -92,15 +92,15 @@
                     <div class="col-8">
                         <form action="" id="form-contato">
                             <div class="form-floating mb-3">
-                                <input class="form-control" type="text" name="nome" id="nome" placeholder="  " autofocus />
-                                <label for="nome">Mateus Angelo</label>
+                                <input class="form-control" type="text" name="nome" id="nome" value="MATEUS ANGELO GOMES SILVA" autofocus />
+                                <label for="nome">Nome completo:</label>
                             </div>
                             <div class="form-floating mb-3 col-md-6 col-xl-4">
-                                <input class="form-control" type="text" name="cpf" id="cpf" />
-                                <label for="cpf">CPF: 000.000.000-00</label>
+                                <input class="form-control" type="text" name="cpf" value="000.000.000-00" id="cpf" />
+                                <label for="cpf">CPF:</label>
                             </div>
                             <div class="form-floating mb-3 col-md-6 col-xl-4">
-                                <input class="form-control" type="date" name="data" id="data" />
+                                <input class="form-control" type="date" name="data" value="31/12/1996" id="data" />
                                 <label for="data">Data de Nascimento</label>
                             </div>
                             <button type="submit" class="btn btn-lg btn-success">Confirmar</button>
