atribuindo 'value' nos inputs

--- a/cliente_dados.html
+++ b/cliente_dados.html
@@ -96,11 +96,11 @@
                                 <label for="nome">Nome completo:</label>
                             </div>
                             <div class="form-floating mb-3 col-md-6 col-xl-4">
-                                <input class="form-control" type="text" name="cpf" value="000.000.000-00" id="cpf" />
+                                <input class="form-control" type="text" name="cpf" id="cpf" value="000.000.000-00" />
                                 <label for="cpf">CPF:</label>
                             </div>
                             <div class="form-floating mb-3 col-md-6 col-xl-4">
-                                <input class="form-control" type="date" name="data" value="31/12/1996" id="data" />
+                                <input class="form-control" type="date" name="data" id="data" value="31/12/1996" />
                                 <label for="data">Data de Nascimento</label>
                             </div>
                             <button type="submit" class="btn btn-lg btn-success">Confirmar</button>
