--- a/cliente_contatos.html
+++ b/cliente_contatos.html
@@ -92,11 +92,11 @@
                     <div class="col-8">
                         <form action="">
                             <div class="form-floating mb-3 col-md-8">
-                                <input class="form-control" type="email" id="txtEmail" placeholder=" " autofocus/>
+                                <input class="form-control" type="email" id="txtEmail" value="mateusangelo@hotmail.com" autofocus/>
                                 <label for="txtEmail">E-mail</label>
                             </div>
                             <div class="form-floating mb-3 col-md-6">
-                                <input class="form-control" type="tel" name="telefone" id="telefone" placeholder=" " />
+                                <input class="form-control" type="tel" name="telefone" id="telefone" value="(77) 9999-99999" />
                                 <label for="txtTelefone">Telefone</label>
                             </div>
                         </form>
