atribuindo 'value' nos inputs

--- a/cliente_contatos.html
+++ b/cliente_contatos.html
@@ -93,11 +93,11 @@
                         <form action="">
                             <div class="form-floating mb-3 col-md-8">
                                 <input class="form-control" type="email" id="txtEmail" value="mateusangelo@hotmail.com" autofocus/>
-                                <label for="txtEmail">E-mail</label>
+                                <label for="txtEmail">E-mail:</label>
                             </div>
                             <div class="form-floating mb-3 col-md-6">
                                 <input class="form-control" type="tel" name="telefone" id="telefone" value="(77) 9999-99999" />
-                                <label for="txtTelefone">Telefone</label>
+                                <label for="txtTelefone">Telefone:</label>
                             </div>
                         </form>
                     </div>
