--- a/cliente_endereco.html
+++ b/cliente_endereco.html
@@ -97,23 +97,23 @@
                     <div class="col-8">
                         <form action="">
                             <div class="form-floating mb-3 col-md-6 col-lg-4">
-                                <input class="form-control" type="text" id="cep" placeholder=" " autofocus />
-                                <label for="txtCEP">CEP</label>
+                                <input class="form-control" type="text" id="cep" value="47600-000" autofocus />
+                                <label for="txtCEP">CEP:</label>
                             </div>
                             <div class="mb-3 col-md-6 col-lg-8">
                                 <textarea class="form-control text-muted bg-light text" style="height: 58px; font-size: 14px;" disabled>Digite o CEP para buscarmos o endereço.</textarea>
                             </div>
                             <div class="form-floating mb-3 col-md-4">
-                                <input class="form-control" type="text" id="txtNumero" placeholder=" " autofocus />
-                                <label for="txtNumero">Número</label>
+                                <input class="form-control" type="text" id="txtNumero" value="165" />
+                                <label for="txtNumero">Número:</label>
                             </div>
                             <div class="form-floating mb-3 col-md-8">
-                                <input class="form-control" type="text" id="txtComplemento" placeholder=" " autofocus />
-                                <label for="txtComplemento">Complemento</label>
+                                <input class="form-control" type="text" id="txtComplemento" value="CASA" />
+                                <label for="txtComplemento">Complemento:</label>
                             </div>
                             <div class="form-floating mb-3">
-                                <input class="form-control" type="text" id="txtReferencia" placeholder=" " autofocus />
-                                <label for="txtReferencia">Ponto de Referência</label>
+                                <input class="form-control" type="text" id="txtReferencia" value="PROXIMO AO MERCADO M.M" />
+                                <label for="txtReferencia">Ponto de Referência:</label>
                             </div>
                         </form>
                     </div>
