atribuindo 'value' nos inputs

--- a/cliente_contatos.html
+++ b/cliente_contatos.html
@@ -92,7 +92,7 @@
                     <div class="col-8">
                         <form action="">
                             <div class="form-floating mb-3 col-md-8">
-                                <input class="form-control" type="email" id="txtEmail" value="mateusangelo@hotmail.com" autofocus/>
+                                <input class="form-control" type="email" id="txtEmail" value="mateusangelo@hotmail.com" />
                                 <label for="txtEmail">E-mail:</label>
                             </div>
                             <div class="form-floating mb-3 col-md-6">
