--- a/cliente_dados.html
+++ b/cliente_dados.html
@@ -92,7 +92,7 @@
                     <div class="col-8">
                         <form action="" id="form-contato">
                             <div class="form-floating mb-3">
-                                <input class="form-control" type="text" name="nome" id="nome" value="MATEUS ANGELO GOMES SILVA" autofocus />
+                                <input class="form-control" type="text" name="nome" id="nome" value="MATEUS ANGELO GOMES SILVA" />
                                 <label for="nome">Nome completo:</label>
                             </div>
                             <div class="form-floating mb-3 col-md-6 col-xl-4">
