--- a/cliente_senha.html
+++ b/cliente_senha.html
@@ -94,19 +94,19 @@
                             <div class="col-sm-12 col-md-8 col-lg-6">
                                 <div class="form-floating mb-3">
 
-                                    <input type="password" id="password" name="password" class="form-control" value="****" autofocus>
+                                    <input type="password" id="password" name="password" class="form-control" value="****" />
                                     <label for="password">Digite aqui sua senha atual:</label>
                                 </div>
 
                                 <div class="form-floating mb-3">
 
-                                    <input type="password" id="passwordtwo" name="passwordtwo" class="form-control" value="********">
+                                    <input type="password" id="passwordtwo" name="passwordtwo" class="form-control" value="********" />
                                     <label for="passwordtwo">Digite aqui sua nova senha:</label>
                                 </div>
 
                                 <div class="form-floating mb-3">
 
-                                    <input type="password" id="passwordthree" name="passwordthree" class="form-control" value="********">
+                                    <input type="password" id="passwordthree" name="passwordthree" class="form-control" value="********" />
                                     <label for="passwordthree">Redigite aqui a nova senha:</label>
                                 </div>
 
