--- a/cliente_endereco.html
+++ b/cliente_endereco.html
@@ -97,13 +97,16 @@
                     <div class="col-8">
                         <form action="">
                             <div class="form-floating mb-3 col-md-6 col-lg-4">
-                                <input class="form-control" type="text" id="cep" value="47600-000" autofocus />
+                                <input class="form-control" type="text" id="cep" value="47600-000" />
                                 <label for="txtCEP">CEP:</label>
                             </div>
-                            <div class="mb-3 col-md-6 col-lg-8">
-                                <textarea class="form-control text-muted bg-light text" style="height: 58px; font-size: 14px;" disabled>Digite o CEP para buscarmos o endereço.</textarea>
+
+                            <div class="form-floating mb-3 col-md-5">
+                                <input class="form-control" type="text" id="município" value="BOM JESUS DA LAPA-BA" />
+                                <label for="">Município:</label>
                             </div>
-                            <div class="form-floating mb-3 col-md-4">
+
+                            <div class="form-floating mb-3 col-md-3">
                                 <input class="form-control" type="text" id="txtNumero" value="165" />
                                 <label for="txtNumero">Número:</label>
                             </div>
