--- a/cliente_endereco.html
+++ b/cliente_endereco.html
@@ -106,6 +106,12 @@
                                 <label for="">Município:</label>
                             </div>
 
+
+                            <div class="form-floating mb-3 col-md-4">
+                                <input class="form-control" type="text" id="endereco" value="RUA PIAUÍ" />
+                                <label for="endereco">Endereço:</label>
+                            </div>
+
                             <div class="form-floating mb-3 col-md-3">
                                 <input class="form-control" type="text" id="txtNumero" value="165" />
                                 <label for="txtNumero">Número:</label>
