Validação do campo 'email'

--- a/recuperarsenha.html
+++ b/recuperarsenha.html
@@ -61,13 +61,13 @@
         </nav>
 
         <main class="flex-fill">
-            <div class="container">
+            <div class="container" id="form-contato">
                 <div class="row justify-content-center">
                     <form class="col-sm-10 col-md-8 col-lg-6">
                         <h1>Recuperação de Senha</h1>
 
                         <div class="form-floating mb-3">
-                            <input type="email" id="txtEmail" class="form-control" placeholder=" " autofocus>
+                            <input type="email" id="email" class="form-control" placeholder=" " autofocus>
                             <label for="txtEmail">E-mail</label>
                         </div>
 
@@ -140,9 +140,13 @@
     </div>
 
     <!-- the end button topo  -->
-
+    <script src="./js/bootstrap.bundle.js"></script>
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.mask.min.js"></script>
     <script src="./scripts/topo.js"></script>
     <script src="./js/bootstrap.bundle.js"></script>
+    <script src="./scripts/recusenha.js"></script>
 </body>
 
 </html>
