Ajuste no nome da empresa

--- a/confirmrecupsenha.html
+++ b/confirmrecupsenha.html
@@ -68,13 +68,13 @@
                     Caro cliente,
                 </p>
                 <p>
-                    As instruções para a realização de cadastro de uma nova senha foram enviadas para o e-mail <b>email@dominio.com.br</b>. Abra a mensagem que lhe enviamos e siga as instruções corretamente para cadastrar uma nova senha.
+                    As instruções para a realização de cadastro de uma nova senha foram enviadas para o e-mail <b>email@dominio.com.br</b> Abra a mensagem que lhe enviamos e siga as instruções corretamente para cadastrar uma nova senha.
                 </p>
                 <p>
                     Agradecemos pela confiança em nossos serviços.
                 </p>
                 <p>
-                    Cordialmente,<br> Central de Relacionamento Quitanda Online
+                    Cordialmente,<br> Central de Relacionamento <strong>Sacolão Avenida</strong>
                 </p>
                 <p>
                     <a href="index.html" class="btn btn-lg btn-danger">Voltar à Página Principal</a>
